# rose

./: AUTHORS.md  README.md  TODO.txt  pyproject.toml  setup.py
.github/workflows/: conda-package-build.yml
conda/: environment.yml  meta.yaml
doc/: conf.py  environment.yml  index.rst
doc/user/: autosum.rst  chronogramme.ods  index.rst  notebooks.rst  overview.txt
examples/: 3D_rose_reconstruction.ipynb  light.ipynb
rose/: 21052010_BFV.txt  26.mtg  3.mtg  31.mtg  62.mtg  AUTHORS.txt  CropGeneration.py  GetPlantID.py  PlantFrame_Rose.py  PlantPositions.py  README.txt  SceneRotation.py  mesh_roseLeaflet.py  metainfo.ini  setup.py  test2011OK.mtg
rose/doc/: conf.py  contents.rst
rose/fullinteraction/: rosebud-v0.lpy  utils.py
rose/growth/: __wralea__.py  rose-transport-new.lpy  rose-transport-topbloom.lpy  rose-transport.lpy  rose-transport2.lpy  rose.lpy
rose/internode/: internodebud-model-v3.lpy  internodebud-model-v4b.lpy  rose-transport-simple-internode-v2b.lpy  rosebud-v1-p1.lpy  rosebud-v1-p2.lpy  rosebud-v1-p3.lpy  rosebud-v1-p4.lpy  rosebud-v1-p5a.lpy  rosebud-v1-p5b.lpy  rosebud-v1-p7b.lpy  transport_eq.py
rose/mockup/: __wralea__.py  httpDir2DictOfFiles.py  rose_geometry.py
rose/rose/: 11.mtg  2011-M1-PARfort-P1.txt  2011-M1-PARfort-P3.txt  21052010_BFV.txt  32.mtg  39.mtg  56.mtg  67.mtg  68.mtg  9.mtg  B1.mtg  B3.mtg  CropGeneration.py  CropGeneration_2011.py  Files2MTGs.py  GetLocalFiles.py  GetMTG.py  Leaflet_Orientation_4points.py  LocalDir2DictOfFiles.py  MTG_union.py  NoLeaflet.py  PlantFrame_Rose.py  PlantPositionning.py  ReconstructionWithTurtle.py  VertexVisitor.py  __init__.py  __wralea__.py  computeLeaflet4pts.py  gridFile2Dict.py  growRose.lpy  httpDir2DictOfFiles.py  (+12 more)
test/: test_reconstruction.py  test_rose.py  test_turtle.py  test_turtle2.py
(+1339 files in other folders)
